--- a/templates/index.html
+++ b/templates/index.html
@@ -3973,7 +3973,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Pay As You Mow</h3>
-                    <p>Professional garden maintenance with flexible payment options. Beautiful gardens, no contracts.</p>
+                    <p>Low prices, great work and happy customer</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
